# bodhi

./: .clippy.toml  .gitignore  .rustfmt.toml  Cargo.toml  rust-toolchain.toml
.cargo/: config.toml
.github/prompts/: rust.prompt.md
app/auth/: Cargo.toml
app/chat/server/gateway/: Cargo.toml  build.rs
app/chat/server/gateway/src/: main.rs
app/chat/server/lobby/: Cargo.toml  build.rs
app/chat/server/lobby/src/: main.rs
app/gateway/: Cargo.toml
app/gateway/src/: error.rs  globals.rs  main.rs
app/gateway/src/error/: helpers.rs  impls.rs  types.rs
app/instance/: Cargo.toml
app/logic/: Cargo.toml
app/world/: Cargo.toml
apps/gatewaysvr/: Cargo.toml
apps/gatewaysvr/src/: config.rs  error.rs  main.rs  result.rs
assets/custom/: stanley.toml
assets/templates/infra/: logging.toml  service.toml
assets/templates/service/: gateway.toml  lobby.toml
cfg/stanley/: gateway.toml  logging.toml  service.toml  stanley.toml
config/: config.toml  type_overrides.toml
config/product/dev/stanley/: gateway.toml  lobby.toml
config/profile/: dev.toml  stanley.toml
config/template/infra/: log.toml  logging.toml  metrics.toml  net.toml  service.toml
config/template/service/: gateway.toml  lobby.toml
crates/bodhi/: Cargo.toml
crates/bodhi/src/: args.rs  error.rs  globals.rs  init.rs  lib.rs  service.rs
crates/bodhi/src/args/: args.rs  cli.rs  parser.rs  types.rs
crates/bodhi/src/error/: error.rs  error_impl.rs  ext.rs  filters.rs  filters_builder_impl.rs  filters_impl.rs  frame.rs  frame_impl.rs  helpers.rs  impls.rs  macros.rs  option.rs  result.rs  types.rs  wrapper.rs
crates/bodhi/src/service/: errors.rs  serve.rs  tracing.rs
crates/bodhi/tests/: test_error.rs
crates/bodhi/tools/cfggen/: emitter.rs  generater.rs  loader.rs  main.rs  merge.rs  service.rs
crates/bodhi/tools/cfggen2/: args.rs  loader.rs  main.rs  merge.rs  render.rs  util.rs
crates/bodhi/tools/config_gen/: emitter.rs  loader.rs  main.rs  merge.rs  profile.rs
crates/bodhi/tools/gen_cfg/: cli.rs  emitter.rs  loader.rs  main.rs  merge.rs  validator.rs
crates/bodhi_args/: Cargo.toml
crates/bodhi_args/src/: args.rs  args_test.rs  helper.rs  lib.rs
crates/bodhi_config/: Cargo.toml
crates/bodhi_config/examples/: bodhi_config_example.rs
crates/bodhi_config/src/: app.rs  app_config.rs  codegen.rs  engine.rs  errcode.rs  fwk.rs  fwk_config.rs  lib.rs  loader.rs  merge.rs  output.rs  resolve.rs  runtime.rs  validate.rs
crates/bodhi_config/src/fwk/: log.rs
crates/bodhi_config/tests/: cli_test.rs  codegen_test.rs  engine_test.rs  merge_test.rs  runtime_test.rs
crates/bodhi_config_macros/: Cargo.toml
crates/bodhi_config_macros/src/: lib.rs
crates/bodhi_error/: Cargo.toml
crates/bodhi_error/examples/: bodhi_error_example.rs
crates/bodhi_error/src/: errcode.rs  error.rs  lib.rs
crates/bodhi_error/src/custom/: error.rs
crates/bodhi_error/src/errcode/: macros.rs  registry.rs
crates/bodhi_error/src/error/: core.rs  ext.rs  filter.rs  frame.rs
crates/bodhi_log/: Cargo.toml
crates/bodhi_result/: Cargo.toml
crates/bodhi_result/src/: result.rs
crates/bodhi_service/: Cargo.toml
crates/bodhi_service/src/: lib.rs  service.rs
crates/service/: Cargo.toml
crates/service/src/: args.rs  args_test.rs  lib.rs
