# https://doc.rust-lang.org/cargo/reference/manifest.html
# https://spdx.org/licenses/

[workspace]
resolver = "3"
members = [
  "app/auth",
  "app/gateway",
  "app/instance",
  "app/logic",
  "app/world",
  "crates/bodhi",
]

[workspace.package]
edition = "2024"
rust-version = "1.89.0"

[workspace.dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-error = "0.2"
thiserror = "2.0.17"
toml = "0.9.8"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
