[package]
name = "gatewaysvr"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
thiserror = { workspace = true }
bodhi_service = { path = "../../crates/bodhi_service" }
bodhi_error = { path = "../../crates/bodhi_error" }
bodhi_result = { path = "../../crates/bodhi_result" }
