[package]
name = "bodhi"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
eyre = { workspace = true, default-features = false, features = [
  "auto-install",
] }
color-eyre = { version = "0.6", optional = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = [
  "env-filter",
  "fmt",
  "std",
] }
tracing-error = { workspace = true }

# Reuse workspace-managed serde and serde_json if available for serialization helpers
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
toml = { workspace = true }

[features]
default = []
debug = ["color-eyre"]
