[package]
name = "bodhi_config"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
bodhi_error = { path = "../bodhi_error" }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.12"
syn = { version = "2", features = ["full", "parsing"] }
toml = "1"

[dev-dependencies]
tempfile = "3"
